syntax = "proto3";

package calculator;

option go_package = "proto-go/calculator/proto";

import "prime.proto";
import "average.proto";
import "max_number.proto";

message CalculationRequest {
  string operation = 1;
  int32 x = 2;
  int32 y = 3;
}

message CalculatorResponse {
  int64 result = 1;
}

service CalculatorService {
  rpc Calculate(CalculationRequest) returns (CalculatorResponse);
  rpc PrimeDecomposition(NumberRequest) returns (stream PrimeNoResponse);
  rpc AverageClientStreaming(stream AverageRequest) returns (AverageResponse);
  rpc FindMaxNumberBiDirectional(stream NumbersRequest) returns (stream MaxResponse);
}