syntax = "proto3";

package calculator;

option go_package = "proto-go/calculator/proto";


message NumberRequest {
  int64 number = 1;
}

message PrimeNoResponse {
  int64 primeNo = 1;
}